[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unet"
version = "0.0.1"
description = "UNet implementation in TensorFlow"
readme = "README.md"
readme_content_type = "text/markdown"
license = "Apache 2.0"
license_files = ["LICENSE"]
author = "Victor I. Afolabi"
author_email = "javafolabi@gmail.com"
keywords = ["tensorflow", "machine learning", "deep learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "tensorflow",
  "tensorflow-dataset",
  "matplotlib",
]
# optional_dependencies = {
#   "test": ["pytest", "pytest-cov"],
#   "lint": ["autopep8", "mypy"],
# }

[tools.setuptools]
packages = ["unet"]
