[metadata]
name = unet
version = 0.0.1
description = U-Net implementation in TensorFlow
long_description = file: README.md
long_description_content_type = text/markdown
keywords = [tensorflow, u-net, image-segmentation]
author = Victor I. Afolabi
author_email = javafolabi@gmail.com
license = Apache-2.0
license_file = LICENSE
requirements_file = requirements.txt
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  License :: OSI Approved :: Apache 2.0
  License :: OSI Approved :: Apache Software License
  Natural Language :: English
  Operating System :: OS Independent
  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.9
include_package_data = true
package_dir =
  = unet
zip_safe = true

[options.packages.find]
exclude =
  tests*

[options.extras_require]
tests* =
  mypy>=0.910
  pytest>=6.2.5
  pytest-cov>=2.0
  tox>=3.24

[options.package_data]
unet =
  py.typed

[coverage:run]
plugin = covdefaults

[mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[bdist_wheel]
universal = true